tests/rascal/negative/parse_errors/L1/non-assoc4.ob
MODULE Bla;

BEGIN
  x := 1 < 1 > 1;
END Bla.
